# reservation-app

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/db/: database.py
backend/models/: schemas.py
backend/routers/: customers.py  reservations.py  tables.py
database/: database.sql
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.js  theme.js
frontend/src/components/: AddCustomer.jsx  ChooseDateAndGuests.jsx  ChooseTableType.jsx  ChooseTimeAndDuration.jsx  Customers.jsx  Home.jsx  MakeReservation.jsx  NavBar.jsx  Raport.jsx  Reservations.jsx
